test/pending/neg/scopes.check
scopes.scala:1 error: x is already defined as value x
case class test0(x: int, x: float)
                         ^
scopes.scala:2 error: x is already defined as value x

^
scopes.scala:5 error: x is already defined as value x
  val x: float = .0f
      ^
scopes.scala:8 error: y is already defined as value y
     val y: float = .0f
         ^
scopes.scala:11 error: x is already defined as value x
  def params(x: int, x: float) = x
                     ^
scopes.scala:12 error: y is already defined as value y
  def curried(x: int)(y: int, y: float) = x + y
                              ^
scopes.scala:13 error: x is already defined as value x
  (x: int, x: float) => x
            ^
7 errors found
